--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
         </div>
 
         <div class="credits">
-          Designed by <a href="https://unleash.ph/">Unleash</a>
+          Designed by <a href="https://unleash.ph/">Jude Michael Daroya Maagad</a>
         </div>
       </div>
     </div>
