temporarily disabled the loader

--- a/index.html
+++ b/index.html
@@ -93,13 +93,15 @@
       <div id="anmtd-txt-cont" class="container">
         <div class="animated-title">
           <div class="text-top">
-            <div>
+            <div id="up-txt-animate" style="width: 100%;">
               <!-- <span>Unleash PH</span> -->
               <span>Efficiency - Innovation</span>
             </div>
           </div>
           <div class="text-bottom">
-            <div>Techforce Solutions Inc.</div>
+            <div style="width: 100%;">
+             <div>Techforce Solutions Inc.</div>
+            </div>
           </div>
         </div>
       </div>
@@ -983,6 +985,7 @@
   </footer>
   <!-- End Footer -->
 
+  <!-- ----------- PAGE SPINNER ------------>
   <div id="spnrlodr">
     <div class="container-fluid">
       <div class="row">
@@ -990,6 +993,7 @@
       </div>
     </div>
   </div>
+    <!-- ----------- PAGE SPINNER END ------------>
   <a href="#" class="home-nav d-flex align-items-center justify-content-center">
     <!-- <i class="bi bi-arrow-up-short"></i> -->
     <img width="50" height="50" src="https://img.icons8.com/dotty/80/FFFFFF/login-rounded-up.png"
